--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,14 +37,18 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PROYECTO_POO_INCIDENCIAS
 endorsed.classpath=
 excludes=
+file.reference.itext5-itextpdf-5.5.12.jar=C:\\Users\\ANITA\\Downloads\\conector\\itext5-itextpdf-5.5.12.jar
 file.reference.jcalendar-1.4.jar=../../../Downloads/jcalendar-1.4.jar/jcalendar-1.4.jar
+file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\ANITA\\Downloads\\mysql-connector-j-8.1.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
